--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch ./omyfood.scss:./css/omyfood.css",
-    "prefix": "postcss ./omyfood.scss --use autoprefixer -d .//css/"
+    "prefix": "postcss ./css/omyfood.css --use autoprefixer -d ./css"
   },
   "author": "",
   "license": "ISC",
